Fixed  colours and alignment in the nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,6 @@
     border: none;
 }
 
-header {
-    display: grid;
-    color: #fbfbfa;
-    background-color: #6d8a96
-}
 
 
 body {
@@ -33,10 +28,16 @@ body {
 
 /* navigation links */
 
+header {
+    height: 80px;
+    background-color: #6d8a96;
+    }
+
+
 #menu {
     font-size: 100%;
     font-weight: 800;
-    letter-spacing: 4px;    
+    letter-spacing: 4px;  
 }
 
 #menu, #logo {
@@ -46,12 +47,12 @@ body {
 #menu li {
     float: right;
     list-style-type: none;
-    margin-right: 30px;
+    margin-right: 30px; 
 }
 
 #menu a {
     text-decoration: none;
-    color: inherit;
+    color: #fbfbfa;
 }
 
 #menu a:hover {
